--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "iantoo/laravel-greeting-package",
-    "description": "The Laravel Greeting package is a lightweight, customizable package that provided personalized greeting messages based on the time of the day.It automatically detects the current time and delivers an appropriate greeting either in Kiswahili or English. If a user is logged in, the greeting is personalized with their first name or email.",
+    "description": "The Laravel Greeting package is a lightweight, customizable package that provided personalized greeting messages based on the time of the day.",
     "type": "library",
     "license": "MIT",
     "autoload": {
